crates/next-custom-transforms/tests/errors/server-actions/server-graph/9/input.js
import 'my-module'

// prettier-ignore
'use server'
